--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   Cloud189Checkin:
+    if: github.event.repository.owner.id == github.event.sender.id
     runs-on: ubuntu-latest
 
     steps:
