--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   watch:
-    types: started
+    types: [started]
   schedule:
     - cron: 1 0 * * *
 
