--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,14 +2,16 @@ name: Cloud189Checkin
 
 on:
   push:
-  schedule:
-    - cron: '0 0 */1 * *'
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   watch:
-    types: [started]
+    types: started
+  schedule:
+    - cron: 1 0 * * *
 
 jobs:
   Cloud189Checkin:
-    if: github.event.repository.owner.id == github.event.sender.id
     runs-on: ubuntu-latest
 
     steps:
@@ -38,8 +40,8 @@ jobs:
             -H 'Content-Type: application/json' \
             -d '
             {
-              "msgtype": "markdown",
-              "markdown": {
+              "msgtype": "text",
+              "text": {
                   "content": "'"`date "+%F %T %A"`$1"'"
               }
             }'
@@ -130,6 +132,6 @@ jobs:
         echo "----------"
         done
 
-        [ g"${WorkWeiBot}" != g"" ] && WorkWei "${result}"
-        [ g"${DingDingBot}" != g"" ] && DingDing "${result}"
-        [ g"${SCKEY}" != g"" ] && FTQQ "天翼签到" "${result}"
+        [ g"${WorkWeiBot}" != g"" ] && WorkWei "${result}" || echo "未设置企业微信通知"
+        [ g"${DingDingBot}" != g"" ] && DingDing "${result}" || echo "未设置钉钉通知"
+        [ g"${SCKEY}" != g"" ] && FTQQ "天翼签到" "${result}" || echo "未设置Server酱通知"
